--- a/index.html
+++ b/index.html
@@ -7,20 +7,27 @@
 
 </head>
 
-<h1 class="titulo">Tabuada</h1>
-
-<label for="numero">Digite um numero: </label>
-<input type="text">
-
-<button type="submit">Calcule Tabuada</button>
-
-
-<script>
-    
-</script>
-
-
 <body>
-    
+    <h1 class="titulo">Tabuada</h1>
+    <label for="numero">Digite um número:</label>
+    <input type="text" id="numero" />
+
+    <button id="botao">enviar numero</button>
+    <div id="resultado"></div>
+
+    <script>
+      let input = document.getElementById("numero");
+      const botao = document.getElementById("botao");
+      const resultado = document.getElementById("resultado")
+
+
+      botao.addEventListener("click", () => {
+        const valor = parseInt(input.value);
+        for (let i = 1; i <= 10; i++) {
+          const linha = document.createElement("p");
+          linha.textContent = `${valor} x ${i} = ${valor * i}`;
+        }
+        });
+</script>
 </body>
 </html>
